<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_DoorLock_HMI" Id="{f9859ffe-d7ad-478e-94c7-a334a3f895c7}">
    <Declaration><![CDATA[TYPE ST_DoorLock_HMI :
STRUCT
	//To hmi
	sState : STRING;
	
	sDescription : STRING;
	
	bStaRequestButton : BOOL;
	bStaRequestStatus : BOOL;
	bStaLockIsActivated : BOOL;
	bStaDoorIsClosed : BOOL;
	bStaDoorIsOpened : BOOL;
	
	//From hmi
	//<none>
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>