<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SettingsValveWithFB" Id="{fb69a5a3-f64e-4ebd-a088-cc7a4333f589}">
    <Declaration><![CDATA[TYPE ST_SettingsValveWithFB :
STRUCT
	tValveOnTimeout : TIME := T#10S;	/// Timeout for switching valve on [default: 10s]
	tValveOffTimeout : TIME := T#10S;	/// Timeout for switching valve off [default: 10s]
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>